new learning algorithm

--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -2,7 +2,11 @@
 	Decks
 <% end %>
 
-
+<% content_for :toolbar do%>
+	<% if current_user %>
+		<%= link_to 'New Deck', new_deck_path %>
+	<% end %>
+<% end %>
 <div id="decks">
 	<% @decks.each do |deck| %>
 		<div class="deck">
