--- a/app/views/decks/show.html.erb
+++ b/app/views/decks/show.html.erb
@@ -7,6 +7,9 @@
 			if ($(new_flashcard).length > 0){
 				$(new_flashcard).loadFlashcardsForm(deck_id);
 			}
+			if ($('#deck-flashcard-new').length==0){
+				$('.edit-button').hide();
+			}
 			
 					
 			
@@ -15,7 +18,14 @@
 <% end %>
 
 <% content_for :header_title do%>
-	<div class="edit-div"><div class="edit-object"><%= @deck.title %></div><a href="#" class="edit-button"><span class="icon edit-icon"></span><span class="edit-hint">edit</span></a></div>
+	<div class="edit-div">	
+		<div class="edit-object"
+			><%= @deck.title %>
+		</div>
+		<a href="#" class="edit-button">
+			<span class="icon edit-icon"></span><span class="edit-hint">edit</span>
+		</a>
+	</div>
 <% end %>
 
 <% content_for :toolbar do%>
