--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.js"></script>
   <link rel="shortcut icon" href="/favicon.ico"/>
-  <%= stylesheet_link_tag    "application", "jquery.jcountdown1.3.min" %>
+  <%= stylesheet_link_tag    "application"%>
   <%= javascript_include_tag "application" %>
   <%= yield(:head)%>
   <%= csrf_meta_tags %>
