--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,32 +1,58 @@
-<h1>Sign Up</h1>
+<%content_for :head do%>
+	<script type="text/javascript">
+		$(document).ready(function(){
+			$('#navigation').remove();
+			$('#landing-left').hide().delay(500).fadeIn()
+			$('#landing-right').hide().delay(1000).fadeIn();
+			// $('#slogan-div').delay(3000).animate({top:"+=100px"},1000);
+			$('#sign-up-div').hide().delay(3500).slideDown(1000);
+		})
+	</script>
+<%end%>
 
-<%= form_for @user do |f| %>
-  <% if @user.errors.any? %>
-    <div class="error_messages">
-      <h2>Form is invalid</h2>
-      <ul>
-        <% for message in @user.errors.full_messages %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="field">
-    <%= f.label :name %>
-    <%= f.text_field :name %>
-  </div>
 
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions"><%= f.submit %></div>
-<% end %>
+<div id="landing-left">
+	<div id="logo-image">
+		<%= image_tag 'logo.png'%>
+	</div>
+</div>
+<div id="landing-right">
+	<div id="sign-up-div">
+		<h1>Sign Up</h1>
+
+		<%= form_for @user do |f| %>
+		  <% if @user.errors.any? %>
+		    <div class="error_messages">
+		      <h2>Form is invalid</h2>
+		      <ul>
+		        <% for message in @user.errors.full_messages %>
+		          <li><%= message %></li>
+		        <% end %>
+		      </ul>
+		    </div>
+		  <% end %>
+		  <div class="field">
+		    <%= f.label :name %>
+		    <%= f.text_field :name %>
+		  </div>
+
+		  <div class="field">
+		    <%= f.label :email %>
+		    <%= f.text_field :email %>
+		  </div>
+		  <div class="field">
+		    <%= f.label :password %>
+		    <%= f.password_field :password %>
+		  </div>
+		  <div class="field">
+		    <%= f.label :password_confirmation %>
+		    <%= f.password_field :password_confirmation %>
+		  </div>
+		  <div class="actions"><%= f.submit %></div>
+		<% end %>
+		or <%= link_to 'log in', login_path%>
+	</div>
+	<div id="slogan-div">
+		Need to memorize something? <br/> We will <span id="tatwo">"tatwo"</span> it for you.
+	</div>
+</div>
