--- a/app/views/decks/index.html.erb
+++ b/app/views/decks/index.html.erb
@@ -21,7 +21,7 @@
 
 <% content_for :toolbar do%>
 	<% if current_user %>
-		<%= link_to 'New Deck', new_deck_path %>
+		<%= link_to 'New Deck', create_new_deck_path %>
 	<% end %>
 <% end %>
 <div id="decks">
