just added a comment in application.css to test

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,7 +4,7 @@
  * the top of the compiled file, but it's generally better to create a new file per style scope.
 */
 
-
+/* Comment to test the push to github */
 /*this is a change*/
 
 body {
