avoid duplicated cards

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
 
 <div id="navigation">
 	<div id="nav-wrapper">	
-		<a href="/" id="logo-wrapper"><%= image_tag 'logo7.png', :id => 'logo'%></a>
+		<a href="/" id="logo-wrapper"><%= image_tag 'logo.png', :id => 'logo'%></a>
 		<ul id="nav-bar">
 			<li><%= link_to "Decks", decks_path%></li>			
 		</ul>
